New file upload for HW 6

--- a/wk_6_hw.ipynb
+++ b/wk_6_hw.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "dcbcecda-d7b1-499e-b247-93f3510406ff",
    "metadata": {},
    "outputs": [
@@ -27,7 +27,7 @@
        "[6, 9, 12]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
     "    while arg1_index < len(arg1):\n",
     "        arg_2_sum = 0\n",
     "        for arg2_elements in arg2:\n",
-    "            #print(f\"{val}for{val} is a portal for {val}.\")\n",
+    "\n",
     "            print(f\"we are making an error in the sum statement. The correct answer is supposed to be: [2,3,4]\")\n",
     "            arg_2_sum = sum([arg1[arg1_index]+i for i in arg2])\n",
     "        arg1[arg1_index]=arg_2_sum  \n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "abc9cb8e-4b2e-448c-ab75-375044bd4fc4",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
        "[2, 3, 4]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,6 +91,7 @@
     "    while arg1_index < len(arg1):\n",
     "        arg_2_sum = 0\n",
     "        for arg2_elements in arg2:\n",
+    "            #here I am summing together the element at the index of arg1_index with arg2_element\n",
     "            arg_2_sum = arg1[arg1_index ]+ arg2_elements\n",
     "        arg1[arg1_index]=arg_2_sum  \n",
     "        arg1_index+=1\n",
@@ -104,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "ffe74cbb-f6d9-4ce6-a678-05781d8c1ac4",
    "metadata": {},
    "outputs": [],
@@ -173,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 5,
    "id": "f701a2da-46df-48a0-8021-fed4bbd3362d",
    "metadata": {},
    "outputs": [
@@ -245,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 6,
    "id": "e9440192-25e5-4dbe-8567-e42ed91f9bfa",
    "metadata": {},
    "outputs": [],
@@ -313,46 +314,6 @@
     "\n",
     "wrong_add_function(arg_str_1,arg_str_2)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "24710809-32af-45be-b7e6-a219a292eb41",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "989f7bc3-7081-49f6-ae17-75154c895983",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "91b9ab25-e021-4c24-805d-3beda59a7f69",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ff9f7b97-592d-462c-9bb8-670c7dffb047",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1428c1de-064f-4b7c-b222-8cabab7dd2f7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
